<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
        >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_store"

        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_how_was_service"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/how_was_service"
        app:layout_constraintBottom_toBottomOf="@+id/how_was_service"
        app:srcCompat="@drawable/ic_service"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/how_was_service"
        android:layout_width="wrap_content"
        style="@style/Widget.TipTime.TextView"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toEndOf="@+id/icon_how_was_service"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/fifteen_option"

        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/how_was_service"
        app:layout_constraintTop_toBottomOf="@+id/how_was_service">

        <RadioButton
            android:id="@+id/twenty_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/eighteen_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/fifteen_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15" />

    </RadioGroup>

    <ImageView
        android:id="@+id/icon_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_button"
        app:layout_constraintBottom_toBottomOf="@+id/switch_button"
        android:importantForAccessibility="no"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_button"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_switch_button"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />

    <Button
        android:id="@+id/calculate_tip_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tip"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@+id/switch_button"
        app:layout_constraintTop_toBottomOf="@id/switch_button" />

    <TextView
        android:id="@+id/tip_result"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="Tip Amount : 10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_tip_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
